rip out interpreter part 1

--- a/src/meson.build
+++ b/src/meson.build
@@ -59,13 +59,13 @@ src = files(
     'lang/compiler.c',
     'lang/eval.c',
     'lang/fmt.c',
-    'lang/interpreter.c',
     'lang/lexer.c',
     'lang/object.c',
     'lang/parser.c',
     'lang/serial.c',
     'lang/string.c',
     'lang/typecheck.c',
+    'lang/vm.c',
     'lang/workspace.c',
     'args.c',
     'cmd_install.c',
