--- a/tests/meson.build
+++ b/tests/meson.build
@@ -4,7 +4,7 @@
 add_test_setup('valgrind', exclude_suites: 'project', exe_wrapper: ['valgrind'])
 add_test_setup('no_python', exclude_suites: 'requires_python')
 
-subdir('fmt')
+# subdir('fmt')
 subdir('fuzz')
 subdir('lang')
 subdir('project')
